
        CHANGES IN spatstat.explore VERSION 3.2-3.001

OVERVIEW

    o Integration of functions.
    
NEW FUNCTIONS

    o integral.fv
    Compute the integral of a function.


        CHANGES IN spatstat.explore VERSION 3.2-3

OVERVIEW

    o Improvements to envelope methods.
    
    o Suppress warning messages from density.default.
    
    o Minor improvements and bug fixes.

NEW FUNCTIONS

    o compileCDF
    Low level utility for calculating cumulative distribution function
    of distance variable. 

SIGNIFICANT USER-VISIBLE CHANGES

    o circdensity
    Improved output of 'print' method

    o envelope
    All methods for `envelope' now accept a summary function 
    in which the function argument is not named 'r'.
    This includes functions such as `transect.im' and `roc'.
    
    o plot.bermantest
    Improved layout for plots of Berman's Z2 test.

    o plot.fv
    New argument 'clip.xlim'.

    o circdensity
    Suppress annoying warning messages from density.default.
    
    o compileK, compilepcf
    Suppress annoying warning messages from density.default.
    
    o rhohat
    Suppress annoying warning messages from density.default.
    
BUG FIXES

    o envelope methods
    Results were malformed if the name of the function argument was not "r". 
    Fixed.
    
        CHANGES IN spatstat.explore VERSION 3.2-1

OVERVIEW

    o Internal bug fixes.


        CHANGES IN spatstat.explore VERSION 3.2-0

OVERVIEW

    o We thank Jonatan Gonzalez for contributions.
    
    o Changed the calculation of standard errors in density.ppp and relrisk.ppp.

    o Inline arithmetic for function tables ('fv') and arrays ('fasp')

    o Standard error calculation for Smooth.ppp (experimental)
    
    o multitype pair correlation functions can save numerator and denominator.

    o multitype inhomogeneous J functions.

    o More support for automatic bandwidth selection.
    
    o Bug fixes in calculation of standard errors.

NEW FUNCTIONS
